--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     content="WELCOME TO THE NON VIOLENCE ART"
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="icon" href="%PUBLIC_URL%/logo-symbol.svg" />
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
