--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta
     name="description"
-    content="WELCOME TO THE NON VIOLENCE ART"
+    content="Lorem ipsum The message we want to spread is simple, but important to us and hopefully, to many more."
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="icon" href="%PUBLIC_URL%/logo-symbol.svg" />
