--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="utf-8" />
+  <meta charset='utf-8' />
   <!--    <base href="/" />-->
   <!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name='viewport' content='width=device-width, initial-scale=1' />
+  <meta name='theme-color' content='#000000' />
   <meta
-    name="description"
-    content="Lorem ipsum The message we want to spread is simple, but important to us and hopefully, to many more."
+    name='description'
+    content='The Elementals are bringing wellness and good vibes to web3'
   />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="icon" href="%PUBLIC_URL%/logo-symbol.svg" />
+  <link rel='apple-touch-icon' href='%PUBLIC_URL%/logo192.png' />
+  <link rel='icon' href='%PUBLIC_URL%/logo-symbol.svg' />
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
   -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
   <!--
     Notice the use of %PUBLIC_URL% in the tags above.
     It will be replaced with the URL of the `public` folder during the build.
@@ -26,17 +26,17 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel='preconnect' href='https://fonts.googleapis.com'>
+  <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
-    rel="stylesheet">
+    href='https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap'
+    rel='stylesheet'>
 
   <title>FWRD</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
+<div id='root'></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
